--- a/algorithms/encrypt/Makefile
+++ b/algorithms/encrypt/Makefile
@@ -1,10 +1,9 @@
-all: encode decode
+all: encode decode overall
 
 encode:encode.o functions.o
 	g++ -o $@ $^
 decode:decode.o functions.o
 	g++ -o $@ $^
-
 decode.o:decode.cpp
 	g++ -c $<
 encode.o:encode.cpp
