--- a/complex/Makefile
+++ b/complex/Makefile
@@ -3,8 +3,8 @@ all:main
 main:main.o complex.o
 	g++ -o main main.o complex.o
 complex.o:
-	g++ -Wall -c complex.cpp
+	g++ -Wextra -Wall -c complex.cpp
 main.o:
-	g++ -Wall -c main.cpp
+	g++ -Wextra -Wall -c main.cpp
 clean:
 	rm main *.o
